RM-55854: redactor PasswordDerivedEncryptionKeyMaterial; move fromPassword() to EncryptionKeyMaterial